[package]
name = "httpie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
reqwest = "0.11.20"
clap = { version = "4.4.2", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
